# auspol_kg

./: CLAUDE.md  LICENSE  README.md  project_scope.md  pyproject.toml  test_text.txt
data/ground_truth/: 2026-02-25_airport-rail-sunshine.json
output/: cohere_kg.html  comparison.html  kg.html  spacy_kg.html
src/auspol_kg/: claude_extractor.py  graph.py  main.py  models.py  parser.py  prompts.py  scratch.ipynb  spacy_extractor.py  visualize.py
src/auspol_kg/evals/: __init__.py  ground_truth.py  llm_judge.py  runner.py  schema_compliance.py
src/auspol_kg/extraction/: __init__.py  claude_extractor.py  cohere_extractor.py  spacy_extractor.py
src/auspol_kg/graph/: __init__.py  builder.py  visualize.py
tests/: conftest.py  test_claude_extractor.py  test_cohere_extractor.py  test_graph.py  test_ground_truth.py  test_parser.py  test_runner.py  test_schema_compliance.py  test_spacy_extractor.py  test_visualize.py
